---
title: Video Editor
---
classDiagram
    History o-- "0..*" RevertableCmd : stores
    
    SetTextCmd --> VideoEditor : receiver
    SetContrastCmd --> VideoEditor : receiver
    RemoveTextCmd --> VideoEditor : receiver

    SetTextCmd --> History : pushes self
    SetContrastCmd --> History : pushes self
    RemoveTextCmd --> History : pushes self

    UndoCmd --> History : pops last

    class Cmd{
        +execute() None
    }
    class RevertableCmd{
        +execute() None
        +unexecute() None
    }
    RevertableCmd ..|> Cmd

    class VideoEditor{
        +set_text() None
        +remove_text() None
        +get_contrast() float
        +set_contrast() None
        +__str__() string
        
    }
    class History{
        +push() None
        +pop() RevertableCmd
        +__len__() int
    }
    class SetTextCmd{
        +execute() None
        +unexecute() None
    }
    SetTextCmd ..|> RevertableCmd

    class SetContrastCmd{
        +execute() None
        +unexecute() None
    }
    SetContrastCmd ..|> RevertableCmd

    class RemoveTextCmd{
        +execute() None
        +unexecute() None
    }
    RemoveTextCmd ..|> RevertableCmd

    class UndoCmd{
        +execute() None
    }
    UndoCmd ..|> Cmd

